# nvm-bevyutil

./: Cargo.toml  README.md
src/: lib.rs  util.rs
src/camera/: mod.rs  orthographic_camera_scaler.rs
src/collision/: mod.rs  overlap.rs  projection.rs  shape.rs  test.rs
src/compact_str/: bitset.rs  mod.rs  test.rs
src/container/: mod.rs  ring_buffer.rs
src/math/: ext_vec2.rs  mod.rs
src/physics/: cache_grid.rs  collider.rs  collider_lookup.rs  mod.rs
src/resource/: mod.rs  named_resource_provider.rs
src/sync/: mod.rs  queue_exclusive_mpsw.rs  sync_cell.rs
